Fix rules button that is too much at the bottom when fight results are displayed

--- a/style.css
+++ b/style.css
@@ -527,6 +527,10 @@ dialog.rules button[type='submit']:focus-visible {
     margin-block-start: 247px;
   }
 
+  .fight.results + #rules-button {
+    margin-block-start: unset;
+  }
+
   .fight {
     margin-block-start: 80px;
     grid-template: 170px 2.6rem / 1fr 1fr;
